cmake_minimum_required(VERSION 3.9)
project(AddTwoNumbers)

set(CMAKE_CXX_STANDARD 11)

#add_executable(LeetCode ValidNumber.cpp main.cpp AddTwoNumbers.h MedianofSortedArrays.h TrapWater.cpp TrapWater.h)
#add_executable(LeetCode SmallerNumAfterSelf.cpp)
add_executable(LeetCode ReverseWordsInString.cpp)